[tool.poetry]
name = "lab-10"
version = "0.0.0"
description = ""
authors = ["Cody Duong <duongcody507@gmail.com>"]
readme = "README.md"
packages = [{include = "lab_10"}]

[tool.poetry.dependencies]
python = "3.10.8"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
